<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <oliveira.fabio.challenge52.presentation.view.SelectHeaderView
                android:id="@+id/selectHeaderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundColor="@color/color_primary_dark"
                app:componentsColor="@android:color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contentBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:elevation="8dp"
                android:paddingStart="@dimen/spacing_03"
                android:paddingTop="@dimen/spacing_02"
                android:paddingEnd="@dimen/spacing_03"
                android:paddingBottom="@dimen/spacing_05"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectHeaderView">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtBalanceTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_02"
                    android:includeFontPadding="false"
                    android:text="@string/organizer_balance"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_03"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toStartOf="@id/imgEyes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtBalance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/organizer_default_value"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_09"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toStartOf="@+id/imgEyes"
                    app:layout_constraintStart_toStartOf="@+id/txtBalanceTitle"
                    app:layout_constraintTop_toBottomOf="@+id/txtBalanceTitle"
                    tools:text="R$ 3,000.00" />

                <View
                    android:id="@+id/viewBalanceHide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_01"
                    android:layout_marginEnd="@dimen/spacing_04"
                    android:background="@color/color_transparent_grey"
                    app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
                    app:layout_constraintEnd_toEndOf="@+id/gdlHalf"
                    app:layout_constraintStart_toStartOf="@+id/txtBalance"
                    app:layout_constraintTop_toTopOf="@+id/txtBalance" />

                <View
                    android:id="@+id/viewClickHide"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/themeRippleRegularImage"
                    app:layout_constraintBottom_toBottomOf="@+id/imgEyes"
                    app:layout_constraintEnd_toEndOf="@+id/imgEyes"
                    app:layout_constraintStart_toStartOf="@+id/imgEyes"
                    app:layout_constraintTop_toTopOf="@+id/imgEyes" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressHide"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:indeterminate="false"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/imgEyes"
                    app:layout_constraintEnd_toEndOf="@+id/imgEyes"
                    app:layout_constraintStart_toStartOf="@+id/imgEyes"
                    app:layout_constraintTop_toTopOf="@+id/imgEyes" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgEyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_02"
                    android:padding="@dimen/spacing_02"
                    app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtBalance"
                    app:srcCompat="@drawable/ic_eye_on" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressIncome"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/background_progress_circle_organizer"
                    android:indeterminate="false"
                    android:progress="70"
                    android:progressDrawable="@drawable/background_progress_income"
                    app:layout_constraintBottom_toBottomOf="@+id/txtIncome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txtIncomeTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtIncomeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_01"
                    android:layout_marginTop="@dimen/spacing_04"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:text="@string/organizer_income"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_02"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/txtIncome"
                    app:layout_constraintStart_toEndOf="@+id/progressIncome"
                    app:layout_constraintTop_toBottomOf="@+id/txtBalance"
                    app:layout_constraintVertical_chainStyle="packed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtIncome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_half"
                    android:maxLines="1"
                    android:text="@string/organizer_default_value"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_02"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toStartOf="@+id/gdlHalf"
                    app:layout_constraintStart_toStartOf="@+id/txtIncomeTitle"
                    app:layout_constraintTop_toBottomOf="@+id/txtIncomeTitle"
                    tools:text="$2,52" />

                <View
                    android:id="@+id/viewIncomeHide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_01"
                    android:layout_marginEnd="@dimen/spacing_09"
                    android:background="@color/color_transparent_grey"
                    app:layout_constraintBottom_toBottomOf="@+id/txtIncome"
                    app:layout_constraintEnd_toEndOf="@+id/gdlHalf"
                    app:layout_constraintStart_toStartOf="@+id/txtIncome"
                    app:layout_constraintTop_toTopOf="@+id/txtIncome" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/progressSpent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/spacing_half"
                    android:background="@drawable/background_progress_circle_organizer"
                    android:indeterminate="false"
                    android:progress="70"
                    android:progressDrawable="@drawable/background_progress_spent"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSpent"
                    app:layout_constraintStart_toStartOf="@+id/gdlHalf"
                    app:layout_constraintTop_toTopOf="@+id/txtSpentTitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSpentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_01"
                    android:layout_marginTop="@dimen/spacing_04"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:text="@string/organizer_spent"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_02"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintStart_toEndOf="@+id/progressSpent"
                    app:layout_constraintTop_toBottomOf="@+id/txtBalance" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSpent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/organizer_default_value"
                    android:textColor="@color/color_spent"
                    android:textSize="@dimen/text_size_02"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtSpentTitle"
                    app:layout_constraintTop_toBottomOf="@+id/txtSpentTitle"
                    tools:text="$6,125" />

                <View
                    android:id="@+id/viewSpentHide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_01"
                    android:layout_marginEnd="@dimen/spacing_09"
                    android:background="@color/color_transparent_grey"
                    app:layout_constraintBottom_toBottomOf="@+id/txtSpent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtSpent"
                    app:layout_constraintTop_toTopOf="@+id/txtSpent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gdlHalf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.50" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="txtBalance,txtIncome,txtSpent" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="viewBalanceHide,viewIncomeHide,viewSpentHide" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/viewLine"
                android:layout_width="@dimen/spacing_half"
                android:layout_height="0dp"
                android:background="@drawable/bg_title_rounded"
                android:backgroundTint="@color/color_primary"
                app:layout_constraintBottom_toBottomOf="@id/txtTransactions"
                app:layout_constraintStart_toStartOf="@id/gdlStart"
                app:layout_constraintTop_toTopOf="@id/txtTransactions" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTransactions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_01"
                android:layout_marginTop="@dimen/spacing_03"
                android:paddingTop="@dimen/spacing_min"
                android:paddingBottom="@dimen/spacing_min"
                android:text="@string/organizer_transactions"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_02"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@id/gdlEnd"
                app:layout_constraintStart_toEndOf="@id/viewLine"
                app:layout_constraintTop_toBottomOf="@id/contentBalance"
                tools:visibility="visible" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupTransactions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_02"
                app:layout_constraintEnd_toEndOf="@id/gdlEnd"
                app:layout_constraintStart_toStartOf="@id/gdlStart"
                app:layout_constraintTop_toBottomOf="@+id/txtTransactions"
                app:selectionRequired="true"
                app:singleSelection="true"
                tools:visibility="visible" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupTransactions"
                app:layout_constraintVertical_bias="0.4"
                tools:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTransactions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_02"
                android:descendantFocusability="blocksDescendants"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroupTransactions"
                tools:listitem="@layout/item_transaction" />

            <oliveira.fabio.challenge52.presentation.view.StateView
                android:id="@+id/stateViewTransactionsEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_01"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipGroupTransactions"
                app:stateViewDescription="@string/organizer_no_transactions_filter_description"
                app:stateViewImage="@drawable/ic_salary"
                app:stateViewTitle="@string/organizer_no_transactions_filter_title"
                tools:visibility="gone" />

            <oliveira.fabio.challenge52.presentation.view.StateView
                android:id="@+id/stateViewEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_01"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipGroupTransactions"
                app:stateViewDescription="@string/organizer_no_transactions_description"
                app:stateViewImage="@drawable/ic_no_avatar"
                app:stateViewTitle="@string/organizer_no_transactions_title"
                tools:visibility="gone" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdlStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gdlEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_02" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_02"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>