<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentBalance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary"
    android:elevation="8dp"
    android:paddingStart="@dimen/spacing_03"
    android:paddingTop="@dimen/spacing_02"
    android:paddingEnd="@dimen/spacing_03"
    android:paddingBottom="@dimen/spacing_05"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/selectHeaderView">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBalanceTitle"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_02"
        android:includeFontPadding="false"
        android:text="@string/organizer_balance"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_03"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@id/gdlHalf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBalance"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/organizer_default_value"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_09"
        android:textStyle="bold"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/gdlHalf"
        app:layout_constraintStart_toStartOf="@+id/txtBalanceTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceTitle"
        tools:text="R$ 3,000.00" />

    <View
        android:id="@+id/viewBalanceHide"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/spacing_01"
        android:layout_marginEnd="@dimen/spacing_04"
        android:background="@color/color_transparent_grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtBalance"
        app:layout_constraintEnd_toEndOf="@+id/gdlHalf"
        app:layout_constraintStart_toStartOf="@+id/txtBalance"
        app:layout_constraintTop_toTopOf="@+id/txtBalance" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressIncome"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/background_progress_circle_organizer"
        android:indeterminate="false"
        android:progress="70"
        android:progressDrawable="@drawable/background_progress_income"
        app:layout_constraintBottom_toBottomOf="@+id/txtIncome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtIncomeTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtIncomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_01"
        android:layout_marginTop="@dimen/spacing_04"
        android:maxLength="10"
        android:maxLines="1"
        android:text="@string/organizer_income"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_02"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtIncome"
        app:layout_constraintStart_toEndOf="@+id/progressIncome"
        app:layout_constraintTop_toBottomOf="@+id/txtBalance"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtIncome"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_half"
        android:maxLines="1"
        android:text="@string/organizer_default_value"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_02"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/gdlHalf"
        app:layout_constraintStart_toStartOf="@+id/txtIncomeTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtIncomeTitle"
        tools:text="$2,52" />

    <View
        android:id="@+id/viewIncomeHide"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/spacing_01"
        android:layout_marginEnd="@dimen/spacing_09"
        android:background="@color/color_transparent_grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtIncome"
        app:layout_constraintEnd_toEndOf="@+id/gdlHalf"
        app:layout_constraintStart_toStartOf="@+id/txtIncome"
        app:layout_constraintTop_toTopOf="@+id/txtIncome" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressSpent"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/spacing_half"
        android:background="@drawable/background_progress_circle_organizer"
        android:indeterminate="false"
        android:progress="70"
        android:progressDrawable="@drawable/background_progress_spent"
        app:layout_constraintBottom_toBottomOf="@+id/txtSpent"
        app:layout_constraintStart_toStartOf="@+id/gdlHalf"
        app:layout_constraintTop_toTopOf="@+id/txtSpentTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSpentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_01"
        android:layout_marginTop="@dimen/spacing_04"
        android:maxLength="10"
        android:maxLines="1"
        android:text="@string/organizer_spent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_02"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/progressSpent"
        app:layout_constraintTop_toBottomOf="@+id/txtBalance" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSpent"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/organizer_default_value"
        android:textColor="@color/color_spent"
        android:textSize="@dimen/text_size_02"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSpentTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtSpentTitle"
        tools:text="$6,125" />

    <View
        android:id="@+id/viewSpentHide"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/spacing_01"
        android:layout_marginEnd="@dimen/spacing_09"
        android:background="@color/color_transparent_grey"
        app:layout_constraintBottom_toBottomOf="@+id/txtSpent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSpent"
        app:layout_constraintTop_toTopOf="@+id/txtSpent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="txtBalance,txtIncome,txtSpent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="viewBalanceHide,viewIncomeHide,viewSpentHide" />

</androidx.constraintlayout.widget.ConstraintLayout>